check for the existence of MANIFEST.MF files